--- a/app/src/main/res/layout/activity_history_records.xml
+++ b/app/src/main/res/layout/activity_history_records.xml
@@ -10,7 +10,9 @@
         android:id="@+id/tv_history_title"
         android:text="历史记录"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="10pt"
+        />
 
     <ListView
         android:id="@+id/lv_history"
